Fix font-weight classes: align to design spec

--- a/src/components/TokenPicker/TokenPicker.scss
+++ b/src/components/TokenPicker/TokenPicker.scss
@@ -175,7 +175,7 @@ $min-body-height: 150px;
 
   .token-symbol {
     font-size: font-size.$h4;
-    font-weight: font-weight.$heavy;
+    font-weight: font-weight.$bold;
     line-height: 1.5;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
